Fix dark mode history date.t

--- a/client/main.css
+++ b/client/main.css
@@ -228,6 +228,9 @@ body[theme="dark"] #historyforward {
   font-style: italic;
   color: #333333;
 }
+body[theme="dark"] #historydate {
+  color: #AAAAAA;
+}
 
 #historydate.hidden {
   display: none;
